--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the NASCOP Virtual Assistant Demo Instance !</h1>
-        <p>We are here to assist you with any questions or information you may need.</p>
+        <h1>Welcome to the NASCOP ART Guidelines Assistant Demo</h1>
+        <p>This is a test version of our virtual assistant for Kenya's antiretroviral therapy guidelines. Click the icon below to try it out!</p>
     </div>
     
     <script>
