--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the NASCOP ART Guidelines Assistant Demo</h1>
+        <h1>Welcome to the NASCOP Virtual Assistant Demo</h1>
         <p>This is a test version of our virtual assistant for Kenya's antiretroviral therapy guidelines. Click the icon below to try it out!</p>
     </div>
     
