--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         }
         .container {
             text-align: center;
+            max-width: 800px;
+            padding: 20px;
         }
         h1 {
             color: #031B4E;
@@ -24,12 +26,58 @@
         p {
             color: #666;
         }
+        .question-suggestions {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            text-align: left;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 15px 25px;
+        }
+        .question-suggestions h3 {
+            color: #031B4E;
+            margin-top: 0;
+            font-size: 16px;
+            margin-bottom: 12px;
+            text-align: center;
+        }
+        .question-list {
+            margin: 0;
+            padding-left: 20px;
+        }
+        .question-list li {
+            margin-bottom: 10px;
+            color: #444;
+        }
+        .copy-instruction {
+            font-size: 14px;
+            color: #666;
+            font-style: italic;
+            text-align: center;
+            margin-top: 15px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Welcome to the NASCOP Virtual Assistant Demo</h1>
         <p>This is a test version of our virtual assistant for Kenya's antiretroviral therapy guidelines. Click the icon below to try it out!</p>
+        
+        <div class="question-suggestions">
+            <h3>Common Questions You Can Ask</h3>
+            <ul class="question-list">
+                <li>What are the current first-line ART regimens for adults?</li>
+                <li>What is the HIV testing algorithm in Kenya?</li>
+                <li>How should I monitor patients on ART?</li>
+                <li>What are the guidelines for PrEP in Kenya?</li>
+                <li>How to manage common ARV side effects?</li>
+                <li>What are the pediatric ART dosing recommendations?</li>
+                <li>When should patients switch to second-line therapy?</li>
+                <li>What are the viral load monitoring guidelines?</li>
+            </ul>
+            <p class="copy-instruction">Copy and paste any question into the chat window</p>
+        </div>
     </div>
     
     <script>
@@ -43,7 +91,7 @@
                 _k5: "IzAzMUI0RQ==",
                 _k6: "I0U1RThFRA==",
                 _k7: "IzAwNjFFQg==",
-                _k8: "SGVsbG8hIEhvdyBjYW4gSSBoZWxwIHlvdSB0b2RheT8=",
+                _k8: "V2VsY29tZSB0byBOQVNDT1AgVmlydHVhbCBBc3Npc3RhbnQhIEkgY2FuIGhlbHAgd2l0aCBLZW55YSdzIEFSVCBndWlkZWxpbmVzIGFuZCBISVYgY2FyZSBpbmZvcm1hdGlvbi4gV2hhdCBkbyB5b3UgbmVlZCB0b2RheT8=",
                 _k9: "L3N0YXRpYy9jaGF0Ym90L2ljb25zL2RlZmF1bHQtYWdlbnQuc3Zn"
             };
 
