--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
         (function() {
             // Obfuscated configuration - simple encoding to make it harder to read at a glance
             const _0xa1b2 = {
-                _k1: "aHR0cHM6Ly9hZ2VudC1jYTRhZTU5MjI5ZTczNDU5MTk3NS15eHNhdS5vbmRpZ2l0YWxvY2Vhbi5hcHAvc3RhdGljL2NoYXRib3Qvd2lkZ2V0Lmpz",
-                _k2: "M2M3Y2E5MGItZjhlNS0xMWVmLWJmOGYtNGUwMTNlMmRkZGU0",
-                _k3: "V1B1bWg4ZF9aUHJaV1RTaUphUUdhNzNFc1J1VWdIMVg=",
-                _k4: "TkFTQ09QIFZpcnR1YWwgQXNzaXN0YW50",
-                _k5: "IzAwODA4MA==",
-                _k6: "I0U1RThFRA==",
-                _k7: "IzAwNjFFQg==",
-                _k8: "V2VsY29tZSB0byBOQVNDT1AgVmlydHVhbCBBc3Npc3RhbnQhIEkgY2FuIGhlbHAgd2l0aCBLZW55YSdzIEFSVCBndWlkZWxpbmVzIGFuZCBISVYgY2FyZSBpbmZvcm1hdGlvbi4gV2hhdCBkbyB5b3UgbmVlZCB0b2RheT8=",
-                _k9: "L3N0YXRpYy9jaGF0Ym90L2ljb25zL2RlZmF1bHQtYWdlbnQuc3Zn"
-            };
+                            _k1: "aHR0cHM6Ly9hZ2VudC1jYTRhZTU5MjI5ZTczNDU5MTk3NS15eHNhdS5vbmRpZ2l0YWxvY2Vhbi5hcHAvc3RhdGljL2NoYXRib3Qvd2lkZ2V0Lmpz",
+                            _k2: "M2M3Y2E5MGItZjhlNS0xMWVmLWJmOGYtNGUwMTNlMmRkZGU0",
+                            _k3: "V1B1bWg4ZF9aUHJaV1RTaUphUUdhNzNFc1J1VWdIMVg=",
+                            _k4: "TkFTQ09QIFZpcnR1YWwgQXNzaXN0YW50",
+                            _k5: "IzAzMUI0RQ==",
+                            _k6: "I0U1RThFRA==",
+                            _k7: "IzAwNjFFQg==",
+                            _k8: "V2VsY29tZSB0byBOQVNDT1AgVmlydHVhbCBBc3Npc3RhbnQhIEkgY2FuIGhlbHAgd2l0aCBLZW55YSdzIEFSVCBndWlkZWxpbmVzIGFuZCBISVYgY2FyZSBpbmZvcm1hdGlvbi4gV2hhdCBkbyB5b3UgbmVlZCB0b2RheT8=",
+                            _k9: "L3N0YXRpYy9jaGF0Ym90L2ljb25zL2RlZmF1bHQtYWdlbnQuc3Zn",
+                        };
 
             // Function to decode Base64
             function decode(str) {
