--- a/index.html
+++ b/index.html
@@ -67,14 +67,9 @@
         <div class="question-suggestions">
             <h3>Common Questions You Can Ask</h3>
             <ul class="question-list">
+                <li>Explain the three-test algorithm</li>
                 <li>What are the current first-line ART regimens for adults?</li>
-                <li>What is the HIV testing algorithm in Kenya?</li>
-                <li>How should I monitor patients on ART?</li>
-                <li>What are the guidelines for PrEP in Kenya?</li>
-                <li>How to manage common ARV side effects?</li>
-                <li>What are the pediatric ART dosing recommendations?</li>
-                <li>When should patients switch to second-line therapy?</li>
-                <li>What are the viral load monitoring guidelines?</li>
+                <li>What are the guidelines for PrEP?</li>
             </ul>
             <p class="copy-instruction">Copy and paste any question into the chat window</p>
         </div>
