--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <li>Explain the three-test algorithm</li>
                 <li>What are the current first-line ART regimens for adults?</li>
                 <li>What are the guidelines for PrEP?</li>
+                <li>Standard package of care for PLHIV</li>
             </ul>
             <p class="copy-instruction">Copy and paste any question into the chat window</p>
         </div>
