--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NASCOP Virtual Assistant - Demo Instance</title>
+    <title>NASCOP Virtual Assistant</title>
     <style>
         :root {
             --primary-color: #4285F4;
@@ -342,7 +342,7 @@
                 <line x1="3" y1="18" x2="21" y2="18"></line>
             </svg>
         </button>
-        <h1>NASCOP Virtual Assistant - Demo Instance</h1>
+        <h1>NASCOP Virtual Assistant</h1>
     </div>
     
     <div class="app-container">
@@ -350,15 +350,15 @@
             <div class="sidebar-header">
                 <span>Conversations</span>
             </div>
-            <div class="conversation-list" id="conversation-list">
-                <!-- Conversation history will be added here -->
-            </div>
             <button class="new-chat-btn" id="new-chat-btn">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 5V19M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 New Chat
             </button>
+            <div class="conversation-list" id="conversation-list">
+                <!-- Conversation history will be added here -->
+            </div>
         </div>
         
         <div class="chat-container">
