--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     <div class="message-time" id="initial-time"></div>
                 </div>
             </div>
-            <div class="typing-indicator" id="typing-indicator">Agent is thinking...</div>
+            <div class="typing-indicator" id="typing-indicator">Thinking...</div>
             
             <div class="examples">
                 <button class="example-button">Explain the three-test algorithm</button>
