--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NASCOP Virtual Assistant</title>
+    <!-- Add favicon links -->
+    <link rel="icon" type="image/png" href="images/ribbon.png">
+    <link rel="shortcut icon" type="image/png" href="images/ribbon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
