--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </svg>
         </button>
         <h1>NASCOP Virtual Assistant</h1>
+        <!-- Speech toggle button will be added here by JavaScript -->
     </div>
     
     <div class="app-container">
