--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="chat-container">
             <div class="chat-messages" id="chat-messages">
                 <div class="message bot-message">
-                    <div>Hello! I'm the NASCOP Virtual Assistant. I can help answer questions about NASCOP guidelines and HIV treatment protocols. What would you like to know?</div>
+                    <div>Hello! this is a test environment. I can help answer questions about NASCOP guidelines and HIV treatment protocols. What would you like to know?</div>
                     <div class="message-time" id="initial-time"></div>
                 </div>
             </div>
