--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🔍</div>
-                <h3>Resource Locator</h3>
-                <p>Find the nearest healthcare facilities and services in your area.</p>
+                <h3>Up to date information</h3>
+                <p>Find the latest information on HIV/AIDS and STIs.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">📱</div>
