--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         src="https://agent-8d4577d7737ec53f9b24-joien.ondigitalocean.app/static/chatbot/widget.js"
         data-agent-id="a5e2a4cf-04de-11f0-bf8f-4e013e2ddde4"
         data-chatbot-id="DUvi74yvoaYo8FsVGcfMkaug8L8IcObr"
-        data-name="NASCOP Virtual Assitant"
+        data-name="NASCOP Virtual Assistant"
         data-primary-color="#031B4E"
         data-secondary-color="#E5E8ED"
         data-button-background-color="#0061EB"
